{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 17,
  "lineage": "73e76869-86f9-7f2a-a1b1-d33d2f836097",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:128517770886:internet-gateway/igw-01821df7dfa066979",
            "id": "igw-01821df7dfa066979",
            "owner_id": "128517770886",
            "tags": {
              "Name": "project-igw"
            },
            "tags_all": {
              "Name": "project-igw"
            },
            "vpc_id": "vpc-0c59bed7ba82f6c25"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:128517770886:route-table/rtb-08fe0b23d3b4863ba",
            "id": "rtb-08fe0b23d3b4863ba",
            "owner_id": "128517770886",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01821df7dfa066979",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-route-table"
            },
            "tags_all": {
              "Name": "project-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c59bed7ba82f6c25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project_igw",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056c0c15e3aed049e",
            "route_table_id": "rtb-08fe0b23d3b4863ba",
            "subnet_id": "subnet-0791ebfeb0d4d0341"
          },
          "dependencies": [
            "aws_internet_gateway.project_igw",
            "aws_route_table.project_route_table",
            "aws_subnet.project_subnet",
            "aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065e829733de60631",
            "route_table_id": "rtb-08fe0b23d3b4863ba",
            "subnet_id": "subnet-03a6d9f3f07761449"
          },
          "dependencies": [
            "aws_internet_gateway.project_igw",
            "aws_route_table.project_route_table",
            "aws_subnet.project_subnet",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:128517770886:security-group/sg-051748f0fed1896cd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051748f0fed1896cd",
            "ingress": [],
            "name": "terraform-20250210121134760000000001",
            "name_prefix": "terraform-",
            "owner_id": "128517770886",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project-cluster-sg"
            },
            "tags_all": {
              "Name": "project-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c59bed7ba82f6c25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:128517770886:security-group/sg-0785c77e71bb05715",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0785c77e71bb05715",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250210121134961100000002",
            "name_prefix": "terraform-",
            "owner_id": "128517770886",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "project-node-sg"
            },
            "tags_all": {
              "Name": "project-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c59bed7ba82f6c25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:128517770886:subnet/subnet-0791ebfeb0d4d0341",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0791ebfeb0d4d0341",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "128517770886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-subnet-0"
            },
            "tags_all": {
              "Name": "project-subnet-0"
            },
            "vpc_id": "vpc-0c59bed7ba82f6c25"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:128517770886:subnet/subnet-03a6d9f3f07761449",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a6d9f3f07761449",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "128517770886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-subnet-1"
            },
            "tags_all": {
              "Name": "project-subnet-1"
            },
            "vpc_id": "vpc-0c59bed7ba82f6c25"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:128517770886:vpc/vpc-0c59bed7ba82f6c25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03804c99f9241bb84",
            "default_route_table_id": "rtb-0ed8301dc2554841d",
            "default_security_group_id": "sg-029973a9847c43263",
            "dhcp_options_id": "dopt-024a43115652731e1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c59bed7ba82f6c25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed8301dc2554841d",
            "owner_id": "128517770886",
            "tags": {
              "Name": "project-vpc"
            },
            "tags_all": {
              "Name": "project-vpc"
            }
          }
        }
      ]
    }
  ]
}